Fix notification filtering tests